--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <div class="image-container">
             <div>
               <p class="tour">Harry Styles - Love on Tour</p>
-              <p class="date">Tue Nov 15, 8:00pm • IngleWood</p>
+              <p class="date">Thu, Jan 26, 8:00pm • IngleWood</p>
             </div>
           </div>
           <section>
@@ -80,7 +80,7 @@
           <div class="image-container">
             <div>
               <p class="tour">Harry Styles - Love on Tour</p>
-              <p class="date">Tue Nov 15, 8:00pm • IngleWood</p>
+              <p class="date">Thu, Jan 26, 8:00pm • IngleWood</p>
             </div>
           </div>
           <section>
