--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
           <div class="ticket-nav2">
             <p>
               SEC <br />
-              <strong>PIT</strong>
+              <strong>GA</strong>
             </p>
             <p>
               ROW<br />
-              <strong>GA</strong>
+              <strong>GA3</strong>
             </p>
             <p>
               SEAT <br />
@@ -42,7 +42,7 @@
           <div class="image-container">
             <div>
               <p class="tour">Harry Styles - Love on Tour</p>
-              <p class="date">Thu, Jan 26, 8:00pm • IngleWood</p>
+              <p class="date">Thu, Jan 29, 8:00pm • IngleWood</p>
             </div>
           </div>
           <section>
@@ -66,11 +66,11 @@
           <div class="ticket-nav2">
             <p>
               SEC <br />
-              <strong>PIT</strong>
+              <strong>GA</strong>
             </p>
             <p>
               ROW<br />
-              <strong>GA</strong>
+              <strong>GA3</strong>
             </p>
             <p>
               SEAT <br />
@@ -80,7 +80,7 @@
           <div class="image-container">
             <div>
               <p class="tour">Harry Styles - Love on Tour</p>
-              <p class="date">Thu, Jan 26, 8:00pm • IngleWood</p>
+              <p class="date">Thu, Jan 29, 8:00pm • IngleWood</p>
             </div>
           </div>
           <section>
