--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <div class="ticket-nav2">
             <p>
               SEC <br />
-              <strong>GA</strong>
+              <strong>PITA</strong>
             </p>
             <p>
               ROW<br />
@@ -66,7 +66,7 @@
           <div class="ticket-nav2">
             <p>
               SEC <br />
-              <strong>GA</strong>
+              <strong>PITA</strong>
             </p>
             <p>
               ROW<br />
