--- a/index.html
+++ b/index.html
@@ -24,25 +24,25 @@
     <div class="ticket-container">
       <div class="tickets">
         <div class="ticket">
-          <div class="ticket-nav">Standard Ticket</div>
+          <div class="ticket-nav">Platinum Ticket</div>
           <div class="ticket-nav2">
             <p>
               SEC <br />
-              <strong>PITA</strong>
+              <strong>CAT1</strong>
             </p>
             <p>
               ROW<br />
-              <strong>GA3</strong>
+              <strong>C</strong>
             </p>
             <p>
               SEAT <br />
-              <strong>-</strong>
+              <strong>5</strong>
             </p>
           </div>
           <div class="image-container">
             <div>
               <p class="tour">Harry Styles - Love on Tour</p>
-              <p class="date">Sun, Nov 20, 8:30pm • Arena VFG</p>
+              <p class="date">Fri, Mar 17, 8:00pm • Singapore National Stadium</p>
             </div>
           </div>
           <section>
@@ -62,25 +62,25 @@
           />
         </div>
         <div class="ticket">
-          <div class="ticket-nav">Standard Ticket</div>
+          <div class="ticket-nav">Platinum Ticket</div>
           <div class="ticket-nav2">
             <p>
               SEC <br />
-              <strong>PITA</strong>
+              <strong>CAT1</strong>
             </p>
             <p>
               ROW<br />
-              <strong>GA3</strong>
+              <strong>C</strong>
             </p>
             <p>
               SEAT <br />
-              <strong>-</strong>
+              <strong>6</strong>
             </p>
           </div>
           <div class="image-container">
             <div>
               <p class="tour">Harry Styles - Love on Tour</p>
-              <p class="date">Sun, Nov 20, 8:30pm • Arena VFG</p>
+              <p class="date">Tue, Mar 07, 5:00pm • Mt Smart Stadium</p>
             </div>
           </div>
           <section>
@@ -118,7 +118,7 @@
           </p>
         </div>
         <div class="floor">
-          <p>Sec Floor, Row GA</p>
+          <p>Sec FRONT FLOOR, Row </p>
           <span
             ><iconify-icon icon="ion:ticket-sharp"></iconify-icon>&nbsp;2
             tickets</span
