--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           </p>
         </div>
         <div class="floor">
-          <p>Sec FRONT FLOOR, Row </p>
+          <p>Sec CAT1 </p>
           <span
             ><iconify-icon icon="ion:ticket-sharp"></iconify-icon>&nbsp;2
             tickets</span
