--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
     <div class="ticket-container">
       <div class="tickets">
         <div class="ticket">
-          <div class="ticket-nav">Platinum Ticket</div>
+          <div class="ticket-nav">Standard Ticket</div>
           <div class="ticket-nav2">
             <p>
               SEC <br />
-              <strong>CAT1</strong>
+              <strong>PC6</strong>
             </p>
             <p>
               ROW<br />
@@ -62,11 +62,11 @@
           />
         </div>
         <div class="ticket">
-          <div class="ticket-nav">Platinum Ticket</div>
+          <div class="ticket-nav">Standard Ticket</div>
           <div class="ticket-nav2">
             <p>
               SEC <br />
-              <strong>CAT1</strong>
+              <strong>PC6</strong>
             </p>
             <p>
               ROW<br />
