--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <div class="image-container">
             <div>
               <p class="tour">Harry Styles - Love on Tour</p>
-              <p class="date">Tue, Mar 07, 5:00pm • Mt Smart Stadium</p>
+              <p class="date">Fri, Mar 17, 8:00pm • Singapore National Stadium</p>
             </div>
           </div>
           <section>
