--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="ticket-container">
       <div class="tickets">
         <div class="ticket">
-          <div class="ticket-nav">Standard Ticket</div>
+          <div class="ticket-nav">Premium Ticket</div>
           <div class="ticket-nav2">
             <p>
               SEC <br />
@@ -62,7 +62,7 @@
           />
         </div>
         <div class="ticket">
-          <div class="ticket-nav">Standard Ticket</div>
+          <div class="ticket-nav">Premium Ticket</div>
           <div class="ticket-nav2">
             <p>
               SEC <br />
